--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,8 +10,7 @@ spring.jpa.defer-datasource-initialization=true
 # spring.h2.console.enabled=false
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
-# This is mandatory to use the data.sql
 
 logging.level.org.springframework=WARN
