Upload job is working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,11 @@ logging.level.org.springframework=DEBUG
 
 # spring.profiles.active=production
 
-spring.batch.job.enabled=true
+# Contrary to the name, this option disable running the job
+# automatically on start-up
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=always
+
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=${PORT:8081}
